COM-510 - Fix design on mobile

--- a/src/css/themes/planning.styl
+++ b/src/css/themes/planning.styl
@@ -84,7 +84,7 @@
 
 .planning
   padding-left: 30px;
-  @media screen and (max-width: 767px)
+  @media screen and (max-width: 1024px)
       padding-left: 0px;
   &-container
     z-index: 0;
@@ -104,8 +104,6 @@
     padding: 0 20px 15px;
     padding-top: 20px;
     z-index: 10;
-    @media screen and (max-width: 767px)
-      margin: 0 16px 16px;
   &-month
     display: flex;
     @media screen and (min-width: 768px)
